@@ -1,10 +1,10 @@
 name: Libraries
 type: module
 description: Allows version-dependent and shared usage of external libraries.
-# core: 8.x
+core: 8.x
+core_version_requirement: ^8 || ^9
 
-# Information added by Drupal.org packaging script on 2018-01-27
-version: '8.x-3.0-alpha1'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2021-01-04
+version: '8.x-3.0-beta1'
 project: 'libraries'
-datestamp: 1517046488
+datestamp: 1609758296
