@@ -5,7 +5,7 @@ namespace Drupal\libraries\ExternalLibrary\Utility;
 /**
  * Provides an interface for classes giving access to a library ID.
  */
-interface LibraryAccessorIdInterface {
+interface LibraryIdAccessorInterface {
 
   /**
    * Returns the ID of the library.
