@@ -1,8 +1,7 @@
 # This is an example info file of a library used for testing purposes.
 name: Example info file
 
-# Information added by Drupal.org packaging script on 2018-01-27
-version: '8.x-3.0-alpha1'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2021-01-04
+version: '8.x-3.0-beta1'
 project: 'libraries'
-datestamp: 1517046488
+datestamp: 1609758296
