@@ -108,11 +108,11 @@ class DefinitionDiscoveryFactoryTest extends BrowserTestBase {
     /** @var \Drupal\libraries\ExternalLibrary\Definition\DefinitionDiscoveryInterface $discovery */
     $discovery = $this->container->get($discovery_service_id);
     $definition_file = "$definitions_directory/$library_id.json";
-    $this->assertFalse(file_exists($definition_file));
+    $this->assertFileNotExists($definition_file);
     $this->assertTrue($discovery->hasDefinition($library_id));
-    $this->assertFalse(file_exists($definition_file));
+    $this->assertFileNotExists($definition_file);
     $this->assertEquals($discovery->getDefinition($library_id), $expected_definition);
-    $this->assertTrue(file_exists($definition_file));
+    $this->assertFileExists($definition_file);
   }
 
 }
